--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,11 @@ documentation = "https://github.com/rfairley/fedora-coreos-metrics-client/blob/m
 homepage = "https://github.com/rfairley/fedora-coreos-metrics-client"
 repository = "https://github.com/rfairley/fedora-coreos-metrics-client"
 readme = "README.md"
-license = "Apache-2.0" 
+license = "Apache-2.0"
 
 [dependencies]
-error_chain = { package = "error-chain", version = "0.12.1" }
+failure = "0.1.5"
+glob = "0.3.0"
 log = "0.4.6"
 serde = { version = "1.0.91", features = ["derive"] }
 toml = "0.5.1"
