--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 license = "Apache-2.0"
 
 [dependencies]
+env_logger = "^0.6.1"
 failure = "^0.1.5"
 glob = "^0.3.0"
 log = "^0.4.6"
