--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 authors = ["Robert Fairley <rfairley@redhat.com>"]
 edition = "2018"
 description = "Metrics collection client for Fedora CoreOS"
-documentation = "https://github.com/rfairley/fedora-coreos-metrics-client/blob/master/README.md"
-homepage = "https://github.com/rfairley/fedora-coreos-metrics-client"
-repository = "https://github.com/rfairley/fedora-coreos-metrics-client"
+documentation = "https://github.com/coreos/fedora-coreos-metrics-client"
+homepage = "https://github.com/coreos/fedora-coreos-metrics-client"
+repository = "https://github.com/coreos/fedora-coreos-metrics-client"
 readme = "README.md"
 license = "Apache-2.0"
 exclude = [
