rename to fedora-coreos-pinger
Also drop DEPRECATED.md and replace with the README.md.

Adjust terminology in the documentation and throughout the
codebase to avoid "metrics" or "client" and use "pinger" instead.

Add note in `Development` section to test with files in `dist/`
and drop common Cargo commands. Refer to Cargo documentation
instead.

Closes: #16

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "fedora-coreos-metrics-client"
+name = "fedora-coreos-pinger"
 version = "0.0.3-alpha.0"
 authors = ["Robert Fairley <rfairley@redhat.com>"]
 edition = "2018"
-description = "Metrics collection client for Fedora CoreOS"
-documentation = "https://github.com/coreos/fedora-coreos-metrics-client"
-homepage = "https://github.com/coreos/fedora-coreos-metrics-client"
-repository = "https://github.com/coreos/fedora-coreos-metrics-client"
-readme = "DEPRECATED.md"
+description = "Telemetry service for Fedora CoreOS"
+documentation = "https://github.com/coreos/fedora-coreos-pinger"
+homepage = "https://github.com/coreos/fedora-coreos-pinger"
+repository = "https://github.com/coreos/fedora-coreos-pinger"
+readme = "README.md"
 license = "Apache-2.0"
 exclude = [
 ".gitignore",
