--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fedora-coreos-pinger"
-version = "0.0.3-alpha.0"
+version = "0.0.3"
 authors = ["Robert Fairley <rfairley@redhat.com>"]
 edition = "2018"
 description = "Telemetry service for Fedora CoreOS"
