--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,13 @@ liboverdrop = "^0.0.2"
 log = "^0.4.6"
 serde = { version = "^1.0.91", features = ["derive"] }
 toml = "^0.5.1"
+
+[package.metadata.release]
+sign-commit = true
+upload-doc = false
+disable-push = true
+disable-publish = true
+pre-release-commit-message = "cargo: Fedora CoreOS Pinger release {{version}}"
+pro-release-commit-message = "cargo: development version bump"
+tag-message = "Fedora CoreOS Pinger v{{version}}"
+tag-prefix = "v"
