--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ liboverdrop = "^0.0.2"
 log = "^0.4.6"
 serde = { version = "^1.0.91", features = ["derive"] }
 toml = "^0.5.1"
+maplit = "^1.0"
 
 [package.metadata.release]
 sign-commit = true
