--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ log = "^0.4.6"
 serde = { version = "^1.0.91", features = ["derive"] }
 toml = "^0.5.1"
 maplit = "^1.0"
+serde_json = "1.0.40"
 
 [package.metadata.release]
 sign-commit = true
