--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ rust:
   - stable
   - beta
   - nightly
+services:
+  - docker
+before_install:
+  - docker build -t pinger-test .
 matrix:
   allow_failures:
     - rust: nightly
 script:
-  - cargo test
+  - docker run --rm pinger-test
