main.rs: serialize the Agent struct and POST as json
Signed-off-by: Allen Bai <abai@redhat.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ serde_json = "1.0.40"
 slog-scope = "~4.1"
 tempfile = "3.1.0"
 toml = "^0.5.1"
+reqwest = "0.9.22"
 
 [package.metadata.release]
 sign-commit = true
