utl/clock: add clock module to record time intervals
Since reporting will happen daily or monthly, we are keeping
track of time intervals between reports. Two threads are spawned
for tracking daily and monthly reporting. Daily thread will check
timestamp every 12 hours, otherwise put to sleep. Monthly thread
will check every 15 days, otherwise put to sleep.

Signed-off-by: Allen Bai <abai@redhat.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ slog-scope = "~4.1"
 tempfile = "3.1.0"
 toml = "^0.5.1"
 reqwest = "0.9.22"
+bincode = "1.2.0"
+nix = "0.15.0"
 
 [package.metadata.release]
 sign-commit = true
